Update Docker configuration and local dev instructions
The Docker configuration has been updated: path to the pgAdmin server configuration file has been corrected. In addition, Localdev.run.xml has been updated to include a comment providing guidance for users utilizing IntelliJ IDEs to run the project locally. The pgAdmin server configuration file has also been renamed for consistency.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       PGADMIN_DEFAULT_PASSWORD: admin
       PGADMIN_LISTEN_PORT: 5050
     volumes:
-      - ./docker/postgres/servers.json:/pgadmin4/servers.json
+      - ./docker/pgadmin/servers.json:/pgadmin4/servers.json
     depends_on:
       postgres:
         condition: service_healthy
