Add nodemon for hot-reloading and clean up scripts
This commit adds nodemon for hot-reloading during development, reducing the need for manual restarts. Scripts in package.json have been simplified and organized to improve developer experience. Docker compose file and dockerfiles have been updated to support these changes, and unnecessary docker scripts have been removed from package.json.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,9 @@
+# git
+.github
+.gitignore
+.gitmodules
+.git
+
 # root and vendor modules
 node_modules
 */**/node_modules
@@ -5,11 +11,11 @@ node_modules
 # generated code
 dist
 src/types
+project.yaml
 
 # not needed
 docs
 .run
-.github
 *.md
 */**/.md
 */**/.png
