--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-ENDPOINT=https://testnet-validated-validator-rpc.poktroll.com/
+ENDPOINT=https://testnet-validated-validator-rpc.poktroll.com
 CHAIN_ID=poktroll
