Refactor Docker files and scripts, update package.json and remove environment files
This commit includes a major refactoring of Docker files and various scripts. The package.json file was updated with new script commands and improvements. The .env files, which previously held environment variables, were deleted for better security and replaced with a .env.sample file. Multiple .dockerfile scripts were updated to use environment variables for configuration. These changes will improve the maintainability of the project and the security of sensitive environment variables.

--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ install-state.gz
 
 # Generated files
 target/
-dist/
+dist
 src/types
 project.yaml
 
@@ -58,8 +58,8 @@ Thumbs.db
 *.wmv
 
 .data
-dist
 
 # ENV local files
-.env.local
-.env.develop.local
+.env
+.env*
+!.env.sample
