--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Pocketdex is an indexer for the Shannon implementation of the pocket network protocol.",
   "main": "dist/index.js",
   "scripts": {
-    "codegen": "subql codegen",
-    "build": "yarn run codegen && sed -i 's/\\[key: bigint\\]/\\[key: number\\]/g' ./src/types/proto-interfaces/poktroll/application/application.ts && subql build",
+    "codegen": "yarn exec subql codegen",
+    "build": "./scripts/build.sh",
     "prepack": "rm -rf dist && yarn run build",
     "test": "yarn run build && subql-node-cosmos test",
     "vendor:setup": "echo 'installing and building vendor modules' && yarn vendor:cosmjs:install && yarn vendor:cosmjs:build && yarn vendor:subql:install && yarn install && yarn vendor:subql:build",
@@ -16,10 +16,10 @@
     "vendor:clean": "echo 'cleaning vendor modules' && cd vendor && find . -name node_modules | xargs rm -rf && find . -name dist | xargs rm -rf",
     "docker:build": "docker compose build",
     "docker:build:no-cache": "docker compose build --no-cache",
-    "docker:start": "docker compose pull && docker compose up --remove-orphans",
+    "docker:start": "docker compose pull && docker compose  up --remove-orphans",
     "docker:stop": "docker compose stop",
     "docker:clean": "docker compose down -v",
-    "docker:tunnel": "docker compose up -d proxy && echo 'if public key auth fails the password is `proxypass`.' && ssh -o StrictHostKeyChecking=no -N -R 26657:localhost:26657 proxyuser@localhost -p 2222"
+    "docker:tunnel": "./scripts/proxy-tunnel.sh"
   },
   "homepage": "https://github.com/subquery/cosmos-subql-starter",
   "repository": "github:subquery/cosmos-subql-starter",
