chore: ensure .env file exists when building (#1)
* chore: ensure .env file exists when building
* refactor: use error_log function

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "vendor:cosmjs:build": "cd vendor && yarn workspace cosmjs-monorepo-root run build",
     "vendor:subql:build": "cd vendor && yarn workspace @subql/node-cosmos run build",
     "vendor:clean": "echo 'cleaning vendor modules' && cd vendor && find . -name node_modules | xargs rm -rf && find . -name dist | xargs rm -rf",
-    "docker:build": "docker compose build",
-    "docker:build:no-cache": "docker compose build --no-cache",
+    "docker:build": "env sh ./scripts/dotenv-check.sh && docker compose build",
+    "docker:build:no-cache": "env sh ./scripts/dotenv-check.sh && docker compose build --no-cache",
     "docker:start": "docker compose pull && docker compose  up --remove-orphans",
     "docker:stop": "docker compose stop",
     "docker:clean": "docker compose down -v",
